<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="6dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="6dp">

    <TextView
        android:id="@+id/cell_volume_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="55"
        android:ellipsize="end"
        android:fontFamily="sans-serif-condensed"
        android:lines="1"
        android:text="@string/reaction_volume"
        android:textColor="@android:color/black"
        android:textSize="@dimen/main_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cell_volume_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="55"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/hint_enter_value"
        android:inputType="numberDecimal"
        android:textSize="@dimen/main_text_size" />

    <TextView
        android:id="@+id/cell_volume_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:ellipsize="end"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:lines="1"
        android:text="@string/unit_microliter_string"
        android:textColor="@android:color/black"
        android:textSize="@dimen/main_text_size" />

</LinearLayout>